--- a/FootballManagerHTML/index.html
+++ b/FootballManagerHTML/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,30 +18,60 @@
     </style>
   </head>
   <body class="bg-gray-800">
-  <div class="h-full flex flex-col justify-center items-center">
-    <h1 class="text-white text-4xl font-bold text-center">Pro Football Manager <span class="ml-2 px-3 py-1 rounded-md bg-green-500/25 text-green-300 text-lg">v0.0.1a</span></h1>
-    <p class="text-gray-200 mt-4 text-xl text-center">Bienvenue dans le monde de la gestion de football !</p>
-    <p class="text-gray-200 text-xl text-center">Créez votre équipe, entraînez vos joueurs, planifiez vos matchs et devenez champion !</p>
-    <div class="mt-8 flex flex-col items-center">
-      <a href="#" class="mb-4 w-full text-center px-6 py-3 border border-transparent text-base font-medium rounded-md text-white bg-green-500 hover:bg-green-600 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-green-500">
-        Commencer une partie
-      </a>
-      <div class="flex justify-center">
-        <a href="#" class="mr-4 inline-flex items-center px-4 py-2 border border-transparent text-base font-medium rounded-md text-white bg-gray-600 hover:bg-gray-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-500">
-          Paramètres
+    <div class="h-full flex flex-col justify-center items-center overflow-hidden">
+      <h1 class="text-white text-4xl font-bold text-center">Pro Football Manager <span class="ml-2 px-3 py-1 rounded-md bg-green-500/25 text-green-300 text-lg">v0.0.1a</span></h1>
+      <p class="text-gray-200 mt-4 text-xl text-center">Bienvenue dans le monde de la gestion de football !</p>
+      <p class="text-gray-200 text-xl text-center">Créez votre équipe, entraînez vos joueurs, planifiez vos matchs et devenez champion !</p>
+      <div class="mt-8 flex flex-col items-center">
+        <a href="#" class="mb-4 w-full text-center px-6 py-3 border border-transparent text-base font-medium rounded-md text-white bg-green-500 hover:bg-green-600 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-green-500">
+          Commencer une partie
         </a>
-        <a href="#" class="mr-4 inline-flex items-center px-4 py-2 border border-transparent text-base font-medium rounded-md text-white bg-gray-600 hover:bg-gray-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-500">
-          Ressources
-        </a>
-        <a href="#" class="inline-flex items-center px-4 py-2 border border-transparent text-base font-medium rounded-md text-white bg-gray-600 hover:bg-gray-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-500">
-          Github
-        </a>
+        <div class="flex justify-center">
+          <a href="#" class="mr-4 inline-flex items-center px-4 py-2 border border-transparent text-base font-medium rounded-md text-white bg-gray-600 hover:bg-gray-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-500">
+            Paramètres
+          </a>
+          <a href="#" class="mr-4 inline-flex items-center px-4 py-2 border border-transparent text-base font-medium rounded-md text-white bg-gray-600 hover:bg-gray-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-500">
+            Ressources
+          </a>
+          <a href="#" class="inline-flex items-center px-4 py-2 border border-transparent text-base font-medium rounded-md text-white bg-gray-600 hover:bg-gray-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-500">
+            Github
+          </a>
+        </div>
+      </div>
+      <div class="mt-8 text-sm text-gray-200 text-center">
+        <p>Créé par Ormidales - Inspiré par le mode Carrière FIFA et Football Manager</p>
       </div>
     </div>
-    <div class="mt-8 text-sm text-gray-200 text-center">
-      <p>Créé par Ormidales - Inspiré par le mode Carrière FIFA et Football Manager</p>
+
+    <div class="absolute top-8 right-8 w-64 bg-white rounded-lg overflow-hidden shadow-md transform scale-110 rotate-6 translate-x-[-50px] translate-y-[55px]">
+      <div class="px-4 py-3 border-b border-gray-200">
+        <h3 class="text-lg font-semibold text-gray-800">Kylian Mbappé</h3>
+        <p class="text-sm font-medium text-gray-500">Attaquant</p>
+      </div>
+      <div class="px-4 py-3 border-b border-gray-200">
+        <p class="text-sm font-medium text-gray-500">Prix : $218M</p>
+        <p class="text-sm font-medium text-gray-500">Équipe actuelle : Paris Saint Germain</p>
+        <p class="text-sm font-medium text-gray-500">Disponibilité : <span class="text-green-500">Disponible</span></p>
+      </div>
+      <div class="px-4 py-3">
+        <button class="bg-blue-500 hover:bg-blue-600 text-white font-medium py-2 px-4 rounded-full w-full">Acheter</button>
+      </div>
     </div>
-  </div>
+
+    <div class="absolute top-8 right-16 w-64 bg-white rounded-lg overflow-hidden shadow-md transform scale-110 -rotate-12 translate-x-[-255px] translate-y-[25px]">
+      <div class="px-4 py-3 border-b border-gray-200">
+        <h3 class="text-lg font-semibold text-gray-800">Olivier Giroud</h3>
+        <p class="text-sm font-medium text-gray-500">Attaquant</p>
+      </div>
+      <div class="px-4 py-3 border-b border-gray-200">
+        <p class="text-sm font-medium text-gray-500">Prix : $12M</p>
+        <p class="text-sm font-medium text-gray-500">Équipe actuelle : AC Milan</p>
+        <p class="text-sm font-medium text-gray-500">Disponibilité : <span class="text-amber-500">Actuellement blessé</span></p>
+      </div>
+      <div class="px-4 py-3">
+        <button class="bg-blue-500 hover:bg-blue-600 text-white font-medium py-2 px-4 rounded-full w-full">Acheter</button>
+      </div>
+    </div>
   </body>
 </html>
 
