--- a/FootballManagerHTML/components.html
+++ b/FootballManagerHTML/components.html
@@ -138,7 +138,7 @@
 
 					<div class="w-16 h-16 bg-[url('https://www.francebleu.fr/s3/cruiser-production/2023/02/e8eb703b-44bf-4919-9ae1-6842fd69fe46/1200x680_reencodedfatimage_xnaphotostwo598757.jpg')] bg-cover bg-center rounded-full cursor-pointer flex items-start">
 
-						<img alt="Logo AC Milan" src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d0/Logo_of_AC_Milan.svg/1200px-Logo_of_AC_Milan.svg.png" class="h-8 translate-x-[45px] translate-y-[-8px] cursor-pointer">
+						<img alt="Logo AC Milan" src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d0/Logo_of_AC_Milan.svg/langfr-800px-Logo_of_AC_Milan.svg.png" class="h-8 translate-x-[45px] translate-y-[-8px] cursor-pointer">
 
 					</div>
 
@@ -5207,6 +5207,187 @@
 
 				<div class="w-full py-3 flex items-center justify-center border-t border-gray-300/25 text-white text-[14px] hover:bg-white/10 transition-all cursor-pointer">Fermer le Hall of Fame</div>
 
+			</div>
+
+		</div>
+
+		<div class="px-8 py-4 flex items-start gap-x-8 border-y border-gray-300/50 bg-white/10">
+
+			<p class="text-white text-[22px]">CHAT GPT (CIMER CHEF PTN)</p>
+
+		</div>
+
+		<div class="px-8 py-16 flex items-start justify-center flex-wrap gap-8 border-b border-gray-300/50">
+
+			<!-- CARTE D'UN TRANSFERT -->
+			<div class="w-64 bg-white rounded-lg overflow-hidden shadow-md">
+				<div class="px-4 py-3 border-b border-gray-200">
+					<h3 class="text-lg font-semibold text-gray-800">Kylian Mbappé</h3>
+					<p class="text-sm font-medium text-gray-500">Attaquant</p>
+				</div>
+				<div class="px-4 py-3 border-b border-gray-200">
+					<p class="text-sm font-medium text-gray-500">Prix : $218M</p>
+					<p class="text-sm font-medium text-gray-500">Équipe actuelle : Paris Saint Germain</p>
+					<p class="text-sm font-medium text-gray-500">Forme : <span class="text-green-600">Excellente</span></p>
+				</div>
+				<div class="px-4 py-3">
+					<button class="bg-blue-500 hover:bg-blue-600 text-white font-medium py-2 px-4 rounded-full w-full">Acheter</button>
+				</div>
+			</div>
+
+			<!-- CARTE D'UN TRANSFERT -->
+			<div class="w-64 bg-white rounded-lg overflow-hidden shadow-md">
+				<div class="px-4 py-3 border-b border-gray-200">
+					<h3 class="text-lg font-semibold text-gray-800">Olivier Giroud</h3>
+					<p class="text-sm font-medium text-gray-500">Attaquant</p>
+				</div>
+				<div class="px-4 py-3 border-b border-gray-200">
+					<p class="text-sm font-medium text-gray-500">Prix : $12M</p>
+					<p class="text-sm font-medium text-gray-500">Équipe actuelle : AC Milan</p>
+					<p class="text-sm font-medium text-gray-500">Forme : <span class="text-amber-500">Actuellement blessé</span></p>
+				</div>
+				<div class="px-4 py-3">
+					<button class="bg-blue-500 hover:bg-blue-600 text-white font-medium py-2 px-4 rounded-full w-full">Acheter</button>
+				</div>
+			</div>
+
+			<!-- CARTE MESSAGE -->
+			<div class="w-96 bg-white rounded-lg overflow-hidden shadow-md">
+				<div class="px-4 py-3 border-b border-gray-200">
+					<h3 class="text-lg font-semibold text-gray-800">Offre pour le joueur : Olivier Giroud</h3>
+					<p class="text-sm font-medium text-gray-500">De : José Mourinho</p>
+				</div>
+				<div class="px-4 py-3 border-b border-gray-200">
+					<p class="text-sm font-medium text-gray-500">Prix proposé : $8M</p>
+					<p class="text-sm font-medium text-gray-500">Club de l'entraîneur : Real Madrid</p>
+					<p class="text-sm font-medium text-gray-500">Message : "Bonjour, je suis intéressé par le joueur Olivier Giroud et je vous propose une offre de 8 millions de dollars. Seriez-vous prêt à vendre ?"</p>
+				</div>
+				<div class="px-4 py-3">
+					<button class="bg-green-500 hover:bg-green-600 text-white font-medium py-2 px-4 rounded-full mr-2">Accepter l'offre</button>
+					<button class="bg-red-500 hover:bg-red-600 text-white font-medium py-2 px-4 rounded-full">Rejeter l'offre</button>
+				</div>
+			</div>
+
+			<!-- CARTE PRESENTATION LIGUE -->
+			<div class="bg-white rounded-lg overflow-hidden shadow-md">
+				<div class="px-4 py-3 border-b border-gray-200">
+					<h3 class="text-lg font-semibold text-gray-800">Ligue de football</h3>
+					<p class="text-sm font-medium text-gray-500">Nombre de clubs : 10</p>
+				</div>
+				<div class="px-4 py-3 border-b border-gray-200">
+					<ul class="divide-y divide-gray-200">
+						<li class="py-3 flex items-center justify-between">
+							<div class="flex items-center">
+								<span class="text-gray-500 font-medium">Club A</span>
+								<span class="ml-2 text-sm font-medium text-gray-500">(5 victoires, 2 défaites, 3 matchs nuls, 1 trophée)</span>
+							</div>
+							<span class="text-green-500 font-medium">+5</span>
+						</li>
+						<li class="py-3 flex items-center justify-between">
+							<div class="flex items-center">
+								<span class="text-gray-500 font-medium">Club B</span>
+								<span class="ml-2 text-sm font-medium text-gray-500">(4 victoires, 3 défaites, 3 matchs nuls, 0 trophée)</span>
+							</div>
+							<span class="text-red-500 font-medium">-3</span>
+						</li>
+						<li class="py-3 flex items-center justify-between">
+							<div class="flex items-center">
+								<span class="text-gray-500 font-medium">Club C</span>
+								<span class="ml-2 text-sm font-medium text-gray-500">(2 victoires, 6 défaites, 2 matchs nuls, 0 trophée)</span>
+							</div>
+							<span class="text-gray-500 font-medium">0</span>
+						</li>
+						<!-- Ajoutez autant de clubs que vous le souhaitez -->
+					</ul>
+				</div>
+			</div>
+
+			<!-- CARTE JOUEUR -->
+			<div class="bg-white rounded-lg overflow-hidden shadow-md">
+				<div class="px-4 py-3 border-b border-gray-200">
+					<h3 class="text-lg font-semibold text-gray-800">Olivier Giroud</h3>
+					<p class="text-sm font-medium text-gray-500">Club actuel : AC Milan</p>
+				</div>
+				<div class="px-4 py-3 border-b border-gray-200">
+					<div class="flex items-center">
+						<span class="text-gray-500 font-medium">Poste :</span>
+						<span class="ml-2 text-sm font-medium text-gray-500">Attaquant</span>
+					</div>
+					<div class="flex items-start mt-3">
+						<span class="text-gray-500 font-medium">Parcours professionnel :</span>
+						<ul class="ml-2 text-sm font-medium text-gray-500">
+							<li>Club B (2018-2020)</li>
+							<li>Club C (2020-2021)</li>
+							<li>Club A (2021-actuel)</li>
+						</ul>
+					</div>
+					<div class="flex items-center mt-3">
+						<span class="text-gray-500 font-medium">Trophées :</span>
+						<span class="ml-2 text-sm font-medium text-gray-500">3</span>
+					</div>
+				</div>
+			</div>
+
+			<!-- CARTE STADE -->
+			<div class="w-96 bg-white rounded-lg overflow-hidden shadow-md">
+				<div class="px-4 py-3 border-b border-gray-200">
+					<h3 class="text-lg font-semibold text-gray-800">Stade Santiago-Bernabéu</h3>
+					<p class="text-sm font-medium text-gray-500">Stade de football à Madrid, Espagne</p>
+				</div>
+				<div class="px-4 py-3 border-b border-gray-200">
+					<div class="flex items-center">
+						<span class="text-gray-500 font-medium">Nombre de places :</span>
+						<span class="ml-2 text-sm font-medium text-gray-500">86 519</span>
+					</div>
+					<div class="flex items-center justify-between mt-3">
+						<span class="text-gray-500 font-medium">Niveau des gradins :</span>
+						<div class="flex items-center gap-1">
+
+							<svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 24 24" stroke-width="1" stroke="currentColor" class="w-4 h-4 text-amber-300">
+								<path stroke-linecap="round" stroke-linejoin="round" d="M11.48 3.499a.562.562 0 011.04 0l2.125 5.111a.563.563 0 00.475.345l5.518.442c.499.04.701.663.321.988l-4.204 3.602a.563.563 0 00-.182.557l1.285 5.385a.562.562 0 01-.84.61l-4.725-2.885a.563.563 0 00-.586 0L6.982 20.54a.562.562 0 01-.84-.61l1.285-5.386a.562.562 0 00-.182-.557l-4.204-3.602a.563.563 0 01.321-.988l5.518-.442a.563.563 0 00.475-.345L11.48 3.5z" />
+							</svg>
+
+							<svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 24 24" stroke-width="1" stroke="currentColor" class="w-4 h-4 text-amber-300">
+								<path stroke-linecap="round" stroke-linejoin="round" d="M11.48 3.499a.562.562 0 011.04 0l2.125 5.111a.563.563 0 00.475.345l5.518.442c.499.04.701.663.321.988l-4.204 3.602a.563.563 0 00-.182.557l1.285 5.385a.562.562 0 01-.84.61l-4.725-2.885a.563.563 0 00-.586 0L6.982 20.54a.562.562 0 01-.84-.61l1.285-5.386a.562.562 0 00-.182-.557l-4.204-3.602a.563.563 0 01.321-.988l5.518-.442a.563.563 0 00.475-.345L11.48 3.5z" />
+							</svg>
+
+							<svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 24 24" stroke-width="1" stroke="currentColor" class="w-4 h-4 text-amber-300">
+								<path stroke-linecap="round" stroke-linejoin="round" d="M11.48 3.499a.562.562 0 011.04 0l2.125 5.111a.563.563 0 00.475.345l5.518.442c.499.04.701.663.321.988l-4.204 3.602a.563.563 0 00-.182.557l1.285 5.385a.562.562 0 01-.84.61l-4.725-2.885a.563.563 0 00-.586 0L6.982 20.54a.562.562 0 01-.84-.61l1.285-5.386a.562.562 0 00-.182-.557l-4.204-3.602a.563.563 0 01.321-.988l5.518-.442a.563.563 0 00.475-.345L11.48 3.5z" />
+							</svg>
+
+							<svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 24 24" stroke-width="1" stroke="currentColor" class="w-4 h-4 text-amber-300">
+								<path stroke-linecap="round" stroke-linejoin="round" d="M11.48 3.499a.562.562 0 011.04 0l2.125 5.111a.563.563 0 00.475.345l5.518.442c.499.04.701.663.321.988l-4.204 3.602a.563.563 0 00-.182.557l1.285 5.385a.562.562 0 01-.84.61l-4.725-2.885a.563.563 0 00-.586 0L6.982 20.54a.562.562 0 01-.84-.61l1.285-5.386a.562.562 0 00-.182-.557l-4.204-3.602a.563.563 0 01.321-.988l5.518-.442a.563.563 0 00.475-.345L11.48 3.5z" />
+							</svg>
+
+							<svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 24 24" stroke-width="1" stroke="currentColor" class="w-4 h-4 text-amber-300">
+								<path stroke-linecap="round" stroke-linejoin="round" d="M11.48 3.499a.562.562 0 011.04 0l2.125 5.111a.563.563 0 00.475.345l5.518.442c.499.04.701.663.321.988l-4.204 3.602a.563.563 0 00-.182.557l1.285 5.385a.562.562 0 01-.84.61l-4.725-2.885a.563.563 0 00-.586 0L6.982 20.54a.562.562 0 01-.84-.61l1.285-5.386a.562.562 0 00-.182-.557l-4.204-3.602a.563.563 0 01.321-.988l5.518-.442a.563.563 0 00.475-.345L11.48 3.5z" />
+							</svg>
+
+						</div>
+					</div>
+					<div class="flex items-center justify-between mt-3">
+						<span class="text-gray-500 font-medium">Niveau du terrain :</span>
+						<div class="flex items-center gap-1">
+
+							<svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 24 24" stroke-width="1" stroke="currentColor" class="w-4 h-4 text-amber-300">
+								<path stroke-linecap="round" stroke-linejoin="round" d="M11.48 3.499a.562.562 0 011.04 0l2.125 5.111a.563.563 0 00.475.345l5.518.442c.499.04.701.663.321.988l-4.204 3.602a.563.563 0 00-.182.557l1.285 5.385a.562.562 0 01-.84.61l-4.725-2.885a.563.563 0 00-.586 0L6.982 20.54a.562.562 0 01-.84-.61l1.285-5.386a.562.562 0 00-.182-.557l-4.204-3.602a.563.563 0 01.321-.988l5.518-.442a.563.563 0 00.475-.345L11.48 3.5z" />
+							</svg>
+
+							<svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 24 24" stroke-width="1" stroke="currentColor" class="w-4 h-4 text-amber-300">
+								<path stroke-linecap="round" stroke-linejoin="round" d="M11.48 3.499a.562.562 0 011.04 0l2.125 5.111a.563.563 0 00.475.345l5.518.442c.499.04.701.663.321.988l-4.204 3.602a.563.563 0 00-.182.557l1.285 5.385a.562.562 0 01-.84.61l-4.725-2.885a.563.563 0 00-.586 0L6.982 20.54a.562.562 0 01-.84-.61l1.285-5.386a.562.562 0 00-.182-.557l-4.204-3.602a.563.563 0 01.321-.988l5.518-.442a.563.563 0 00.475-.345L11.48 3.5z" />
+							</svg>
+
+							<svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 24 24" stroke-width="1" stroke="currentColor" class="w-4 h-4 text-amber-300">
+								<path stroke-linecap="round" stroke-linejoin="round" d="M11.48 3.499a.562.562 0 011.04 0l2.125 5.111a.563.563 0 00.475.345l5.518.442c.499.04.701.663.321.988l-4.204 3.602a.563.563 0 00-.182.557l1.285 5.385a.562.562 0 01-.84.61l-4.725-2.885a.563.563 0 00-.586 0L6.982 20.54a.562.562 0 01-.84-.61l1.285-5.386a.562.562 0 00-.182-.557l-4.204-3.602a.563.563 0 01.321-.988l5.518-.442a.563.563 0 00.475-.345L11.48 3.5z" />
+							</svg>
+
+							<svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 24 24" stroke-width="1" stroke="currentColor" class="w-4 h-4 text-amber-300">
+								<path stroke-linecap="round" stroke-linejoin="round" d="M11.48 3.499a.562.562 0 011.04 0l2.125 5.111a.563.563 0 00.475.345l5.518.442c.499.04.701.663.321.988l-4.204 3.602a.563.563 0 00-.182.557l1.285 5.385a.562.562 0 01-.84.61l-4.725-2.885a.563.563 0 00-.586 0L6.982 20.54a.562.562 0 01-.84-.61l1.285-5.386a.562.562 0 00-.182-.557l-4.204-3.602a.563.563 0 01.321-.988l5.518-.442a.563.563 0 00.475-.345L11.48 3.5z" />
+							</svg>
+
+						</div>
+					</div>
+				</div>
 			</div>
 
 		</div>
