--- a/FootballManagerHTML/components.html
+++ b/FootballManagerHTML/components.html
@@ -5335,7 +5335,7 @@
 					<p class="text-sm font-medium text-gray-500">Stade de football à Madrid, Espagne</p>
 				</div>
 				<div class="px-4 py-3 border-b border-gray-200">
-					<div class="flex items-center">
+					<div class="flex items-center justify-between">
 						<span class="text-gray-500 font-medium">Nombre de places :</span>
 						<span class="ml-2 text-sm font-medium text-gray-500">86 519</span>
 					</div>
