--- a/FootballManagerHTML/new_components.html
+++ b/FootballManagerHTML/new_components.html
@@ -167,7 +167,7 @@
                         <p class="text-white text-[25px]">Olivier Giroud</p>
                         <p class="text-gray-300 text-[12px]">Rôle dans l'équipe : <a href="#" class="hover:underline">Attaquant</a> / <a href="#" class="hover:underline">Avant-centre</a></p>
                         <p class="text-gray-300 text-[12px]">Équipe actuelle : <a href="#" class="hover:underline">Real Madrid</a></p>
-                        <p class="text-gray-300 text-[12px]">Âge : 36 ans</a></p>
+                        <p class="text-gray-300 text-[12px]">Âge : 36 ans</p>
                     </div>
                     <div class="border-t border-zinc-500 px-3 py-2 pb-4">
                         <p class="text-green-500 text-[30px] leading-[30px]">86<span class="text-white text-[12px] leading-[12px] ml-2">Note Générale</span></p>
